--- a/trunk/DesignTemplate/UISample/UISample/MainPage.xaml
+++ b/trunk/DesignTemplate/UISample/UISample/MainPage.xaml
@@ -2,10 +2,11 @@
 	xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
 	xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
 	xmlns:d="http://schemas.microsoft.com/expression/blend/2008" xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-    
+    xmlns:jl="clr-namespace:UISample"
 	mc:Ignorable="d" xmlns:Liquid="clr-namespace:Liquid;assembly=Liquid.RichText" 
     xmlns:local="clr-namespace:MyControlLibrary;assembly=MyControlLibrary"
     xmlns:inf="clr-namespace:UISample"
+	xmlns:data="clr-namespace:System.Windows.Controls;assembly=System.Windows.Controls.Data"
 	x:Class="UISample.MainPage" d:DesignWidth="800" d:DesignHeight="600" Background="Black">
 	<UserControl.Resources>
 		<Storyboard x:Name="strbShowUnitGrid">
@@ -194,20 +195,54 @@
 				</Setter.Value>
 			</Setter>
 		</Style>
+		<Storyboard x:Name="strbShowNewVocabolary">
+			<DoubleAnimationUsingKeyFrames BeginTime="00:00:00" Storyboard.TargetName="dg_NewVocabulary" Storyboard.TargetProperty="(UIElement.RenderTransform).(TransformGroup.Children)[3].(TranslateTransform.Y)">
+				<EasingDoubleKeyFrame KeyTime="00:00:00" Value="0"/>
+				<EasingDoubleKeyFrame KeyTime="00:00:00.1000000" Value="132"/>
+				<EasingDoubleKeyFrame KeyTime="00:00:00.2000000" Value="340"/>
+				<EasingDoubleKeyFrame KeyTime="00:00:00.3000000" Value="466.026"/>
+				<EasingDoubleKeyFrame KeyTime="00:00:00.4000000" Value="584.342"/>
+				<EasingDoubleKeyFrame KeyTime="00:00:00.5000000" Value="680.342"/>
+				<EasingDoubleKeyFrame KeyTime="00:00:00.6000000" Value="740.342"/>
+				<EasingDoubleKeyFrame KeyTime="00:00:00.7000000" Value="744.342"/>
+				<EasingDoubleKeyFrame KeyTime="00:00:00.8000000" Value="658.123"/>
+				<EasingDoubleKeyFrame KeyTime="00:00:00.9000000" Value="733.09"/>
+				<EasingDoubleKeyFrame KeyTime="00:00:01" Value="745.09"/>
+				<EasingDoubleKeyFrame KeyTime="00:00:01.1000000" Value="693.09"/>
+				<EasingDoubleKeyFrame KeyTime="00:00:01.2000000" Value="741.09"/>
+				<EasingDoubleKeyFrame KeyTime="00:00:01.3000000" Value="721.168"/>
+				<EasingDoubleKeyFrame KeyTime="00:00:01.4000000" Value="737.144"/>
+			</DoubleAnimationUsingKeyFrames>
+		</Storyboard>
+		<Storyboard x:Name="strbShowNewVocabolaryReverse">
+			<DoubleAnimationUsingKeyFrames BeginTime="00:00:00" Storyboard.TargetName="dg_NewVocabulary" Storyboard.TargetProperty="(UIElement.RenderTransform).(TransformGroup.Children)[3].(TranslateTransform.Y)">
+				<SplineDoubleKeyFrame KeyTime="00:00:00" Value="741.09"/>
+				<SplineDoubleKeyFrame KeyTime="00:00:00.1000000" Value="693.09"/>
+				<SplineDoubleKeyFrame KeyTime="00:00:00.2000000" Value="733.09"/>
+				<SplineDoubleKeyFrame KeyTime="00:00:00.3000000" Value="658.123"/>
+				<SplineDoubleKeyFrame KeyTime="00:00:00.4000000" Value="466.026"/>
+				<SplineDoubleKeyFrame KeyTime="00:00:00.5000000" Value="132"/>
+				<SplineDoubleKeyFrame KeyTime="00:00:00.6000000" Value="0"/>
+			</DoubleAnimationUsingKeyFrames>
+		</Storyboard>
 	</UserControl.Resources>
 
 	<Grid x:Name="LayoutRoot" Height="600" Width="800" Background="Black">
-		<ScrollViewer x:Name="scvMain" Height="600" Width="800" Background="#FF0095d9">
+		<ScrollViewer x:Name="scvMain" Background="#FF0095d9" Height="600" Width="800">
 			<Grid Height="600" Width="800">
-				<Rectangle x:Name="rctTop" Fill="#FF231f20" Stroke="Black" Height="70" StrokeThickness="0" VerticalAlignment="Top" Width="800"/>
-				<Rectangle x:Name="rctBottom" Fill="#FF231f20" Stroke="Black" Height="50" VerticalAlignment="Bottom" StrokeThickness="0" Width="800" Margin="0,0,0,-10"/>
-				<TextBlock x:Name="txbLearningEng" Height="36" HorizontalAlignment="Left" Margin="10,-2,0,0" VerticalAlignment="Top" Width="309" Text="LEARNING ENGLISH" TextWrapping="Wrap" FontSize="26.667" FontWeight="Bold" Foreground="White" RenderTransformOrigin="0.5,0.5">
+				<Grid.ColumnDefinitions>
+					<ColumnDefinition Width="0.78*"/>
+					<ColumnDefinition Width="0.22*"/>
+				</Grid.ColumnDefinitions>
+				<Rectangle x:Name="rctTop" Fill="#FF231f20" Stroke="Black" Height="70" StrokeThickness="0" VerticalAlignment="Top" Width="800" Grid.ColumnSpan="2"/>
+				<Rectangle x:Name="rctBottom" Fill="#FF231f20" Stroke="Black" Height="48" VerticalAlignment="Bottom" StrokeThickness="0" Width="800" Grid.ColumnSpan="2"/>
+				<TextBlock x:Name="txbLearningEng" Height="36" Margin="10,-2,305,0" VerticalAlignment="Top" Text="LEARNING ENGLISH" TextWrapping="Wrap" FontSize="26.667" FontWeight="Bold" Foreground="White" RenderTransformOrigin="0.5,0.5">
 					<TextBlock.Projection>
 						<PlaneProjection CenterOfRotationX="0" CenterOfRotationY="0"/>
 					</TextBlock.Projection>
 				</TextBlock>
-				<TextBlock x:Name="txbGrade10" Height="45" Margin="177,29,0,0" VerticalAlignment="Top" Text="GRADE 10" TextWrapping="Wrap" FontSize="29.333" FontWeight="Bold" Foreground="#FF0095D9" HorizontalAlignment="Left" Width="197"/>
-				<Canvas x:Name="cnvAllControl" Margin="0,-634,-912,0" RenderTransformOrigin="0.5,0.5" Height="450" VerticalAlignment="Top">
+				<TextBlock x:Name="txbGrade10" Height="45" Margin="177,29,250,0" VerticalAlignment="Top" Text="GRADE 10" TextWrapping="Wrap" FontSize="29.333" FontWeight="Bold" Foreground="#FF0095D9"/>
+				<Canvas x:Name="cnvAllControl" Margin="0,-634,-912,0" RenderTransformOrigin="0.5,0.5" Height="450" VerticalAlignment="Top" Grid.ColumnSpan="2">
 					<Canvas.RenderTransform>
 						<TransformGroup>
 							<ScaleTransform/>
@@ -240,11 +275,11 @@
 						<Rectangle x:Name="rctSection" Fill="#FF231f20" Stroke="Black" RadiusX="10" RadiusY="10" Height="450" Width="212"/>
 						<TextBlock x:Name="txbChooseSection" Height="43" Text="Choose a section of the unit" TextWrapping="Wrap" FontWeight="Bold" FontSize="16" Foreground="White" HorizontalAlignment="Left" Width="158" TextAlignment="Center" Margin="25,0,0,17" VerticalAlignment="Bottom"/>
 
-						<inf:uc_Reading x:Name="Reading" Margin="0,33,0,0" Height="28" VerticalAlignment="Top"/>
-						<inf:uc_Listening x:Name="Listening" Margin="0,89,0,0" Height="30" VerticalAlignment="Top"/>
-						<inf:uc_Speaking x:Name="Speaking" Margin="1,150,0,0" Height="30" VerticalAlignment="Top"/>
-						<inf:uc_Writing x:Name="Writing" Margin="0,209,0,210"/>
-						<inf:uc_LanguageFocus x:Name="LanguageFocus" Height="31" Margin="0,0,0,153" VerticalAlignment="Bottom"/>
+						<inf:MyButton x:Name="mbtReading" myText="Reading" Margin="0,33,0,0" Height="28" VerticalAlignment="Top" MouseLeftButtonDown="mbt_MouseLeftButtonDown"/>
+						<inf:MyButton x:Name="mbtListening" myText="Listening" Margin="0,65,0,0" Height="30" VerticalAlignment="Top" MouseLeftButtonDown="mbt_MouseLeftButtonDown"/>
+						<inf:MyButton x:Name="mbtSpeaking" myText="Speaking" Margin="0,99,0,0" Height="30" VerticalAlignment="Top" MouseLeftButtonDown="mbt_MouseLeftButtonDown"/>
+						<inf:MyButton x:Name="mbtGrammar" myText="Grammar" Margin="0,133,0,0" MouseLeftButtonDown="mbt_MouseLeftButtonDown" VerticalAlignment="Top" d:LayoutOverrides="Height"/>
+						<inf:MyButton x:Name="mbtLanguageFocus" myText="Language Focus" Height="31" Margin="0,162,0,0" VerticalAlignment="Top" MouseLeftButtonDown="mbt_MouseLeftButtonDown"/>
                         
 					</Grid>
 					<Grid x:Name="grdUnit" Height="450" Width="173" RenderTransformOrigin="0.5,0.5" Canvas.Left="67">
@@ -271,12 +306,25 @@
 							</Rectangle.RenderTransform>
 						</Rectangle>
 						<TextBlock x:Name="txbChooseUnit" Height="29" Text="Choose a unit" TextWrapping="Wrap" FontWeight="Bold" FontSize="16" Foreground="White" TextAlignment="Center" Margin="23,0,19,19" VerticalAlignment="Bottom" Grid.Row="1"/>
-						<Rectangle x:Name="rctUnit1" Fill="#FF0095D9" Stroke="Black" RadiusX="10" RadiusY="10" Height="25" Opacity="0" MouseLeave="rctUnit1_MouseLeave" MouseLeftButtonDown="rctUnit1_MouseLeftButtonDown" MouseMove="rctUnit1_MouseMove" Cursor="Hand" Margin="0,40,0,0" VerticalAlignment="Top"/>
+						<inf:MyButton x:Name="mbtUnit1" myText="Unit 1" Margin="0,36,0,0" Height="28" VerticalAlignment="Top" Width="173"/>
+						<inf:MyButton x:Name="mbtUnit2" myText="Unit 2" Margin="0,68,0,0" Height="28" VerticalAlignment="Top" Width="173"/>
+						<inf:MyButton x:Name="mbtUnit3" myText="Unit 3" Margin="0,98,0,0" Height="28" VerticalAlignment="Top" Width="173"/>
+						<inf:MyButton x:Name="mbtUnit4" myText="Unit 4" Margin="0,130,0,143" Width="173"/>
+						<inf:MyButton x:Name="mbtUnit5" myText="Unit 5" Margin="0,0,0,113" VerticalAlignment="Bottom" d:LayoutOverrides="Height" Width="173"/>
+						<inf:MyButton x:Name="mbtUnit6" myText="Unit 6" Margin="0,0,0,81" Height="28" VerticalAlignment="Bottom" Width="173"/>
+						<inf:MyButton x:Name="mbtUnit7" myText="Unit 7" Margin="0,0,0,53" Height="28" VerticalAlignment="Bottom" Width="173"/>
+						<inf:MyButton x:Name="mbtUnit8" myText="Unit 8" Margin="0,0,0,25" Height="28" VerticalAlignment="Bottom" Width="173"/>
+						<inf:MyButton x:Name="mbtUnit9" myText="Unit 9" Margin="0,0,0,-7" Height="28" VerticalAlignment="Bottom" Width="173"/>
+						<inf:MyButton x:Name="mbtUnit10" myText="Unit 10" Margin="0,7,0,0" Height="28" VerticalAlignment="Top" Grid.Row="1" Width="173"/>
+						<inf:MyButton x:Name="mbtUnit11" myText="Unit 11" Margin="0,35,0,0" VerticalAlignment="Top" Grid.Row="1" d:LayoutOverrides="Height" Width="173"/>
+						<inf:MyButton x:Name="mbtUnit12" myText="Unit 12" Margin="0,64,0,63" Grid.Row="1" Width="173"/>
+						<!--<Rectangle x:Name="rctUnit1" Fill="#FF0095D9" Stroke="Black" RadiusX="10" RadiusY="10" Height="25" Opacity="0" MouseLeave="rctUnit1_MouseLeave" MouseLeftButtonDown="rctUnit1_MouseLeftButtonDown" MouseMove="rctUnit1_MouseMove" Cursor="Hand" Margin="0,40,0,0" VerticalAlignment="Top"/>
 						<Rectangle x:Name="rctUnit2" Fill="#FF0095D9" Stroke="Black" RadiusX="10" RadiusY="10" Height="25" Opacity="0" Cursor="Hand" MouseLeave="rctUnit2_MouseLeave" MouseLeftButtonDown="rctUnit2_MouseLeftButtonDown" MouseMove="rctUnit2_MouseMove" HorizontalAlignment="Right" Margin="0,79,0,0" VerticalAlignment="Top" Width="173"/>
 						<Rectangle x:Name="rctUnit3" Fill="#FF0095D9" Stroke="Black" RadiusX="10" RadiusY="10" Height="25" Opacity="0" Cursor="Hand" MouseLeave="rctUnit3_MouseLeave" MouseLeftButtonDown="rctUnit3_MouseLeftButtonDown" MouseMove="rctUnit3_MouseMove" Margin="1,118,0,0" VerticalAlignment="Top"/>
 						<TextBlock x:Name="txbUnit1" Height="25" FontSize="16" FontWeight="Bold" Foreground="White" Text="Unit 1" TextWrapping="Wrap" Cursor="Hand" Margin="56,40,55,0" VerticalAlignment="Top"/>
 						<TextBlock x:Name="txbUnit2" Height="25" FontSize="16" FontWeight="Bold" Foreground="White" Text="Unit 2" TextWrapping="Wrap" Cursor="Hand" Margin="54,79,55,0" VerticalAlignment="Top"/>
-						<TextBlock x:Name="txbUnit3" Height="25" FontSize="16" FontWeight="Bold" Foreground="White" Text="Unit 3" TextWrapping="Wrap" Cursor="Hand" HorizontalAlignment="Left" Margin="52,118,0,0" VerticalAlignment="Top" Width="64"/>
+						<TextBlock x:Name="txbUnit3" Height="25" FontSize="16" FontWeight="Bold" Foreground="White" Text="Unit 3" TextWrapping="Wrap" Cursor="Hand" HorizontalAlignment="Left" Margin="52,118,0,0" VerticalAlignment="Top" Width="64"/>-->
+                        
 					</Grid>
 					<Rectangle x:Name="rctLeft" Fill="#FF231f20" Stroke="Black" Width="48" RadiusY="10" RadiusX="10" Height="450" d:LayoutOverrides="Height" Canvas.Left="-8"/>
 					<Rectangle Fill="#FF231f20" Stroke="Black" RadiusX="16" RadiusY="16" Height="450" Width="218" Canvas.Left="746"/>
@@ -290,7 +338,7 @@
 							</TransformGroup>
 						</Canvas.RenderTransform>
 						<Rectangle x:Name="rctReadingContent" Fill="#FF00172E" Stroke="Black" Height="450" Width="727" Canvas.Left="73" Opacity="0.35" StrokeThickness="0"/>
-						<TextBlock x:Name="txbReadingTitle" Height="28" Width="238" Canvas.Left="93" Canvas.Top="16" TextWrapping="Wrap" Foreground="#FFFFFEFE" Text="Unit 1 Reading" FontSize="18.667" FontWeight="Bold"/>
+						<TextBlock x:Name="txbReadingTitle" Height="28" Width="85" Canvas.Left="93" Canvas.Top="16" TextWrapping="Wrap" Foreground="#FFFFFEFE" Text="Unit 1" FontSize="18.667" FontWeight="Bold"/>
 						<Button x:Name="btnTriangle" Height="56" Style="{StaticResource triangleButton}" Width="32" Canvas.Top="186" Content="Button" Click="btnTriangle_Click" RenderTransformOrigin="0.5,0.5" Canvas.Left="12" Cursor="Hand">
 							<Button.RenderTransform>
 								<TransformGroup>
@@ -306,8 +354,20 @@
 						<Button x:Name="bntVietnam" Height="40" Width="232" FontSize="21.333" FontWeight="Bold" Content="Vietnammese" Canvas.Left="496" Canvas.Top="402" Click="bntVietnam_Click"/>
 						<Liquid:RichTextBox x:Name="rtbxReading" Canvas.Left="73" Canvas.Top="48" TextWrapping="Wrap" Width="727" Height="330" FontSize="21.333" Background="#FF231F20" BorderThickness="0" Foreground="White"/>
 						<local:ReadingPracticeControl x:Name="rpcReadingPractice" Canvas.Left="73" Canvas.Top="48" Width="727" Height="330"/>
+						<TextBlock x:Name="txbReadingTitle_Copy" Height="28" Width="251" Canvas.Left="178" Canvas.Top="16" TextWrapping="Wrap" Foreground="#FFFFFEFE" Text="Reading" FontSize="18.667" FontWeight="Bold"/>
 					</Canvas>
 				</Canvas>
+				<Button x:Name="bnt_New_Vocabulary" HorizontalAlignment="Right" Margin="0,0,40,15" VerticalAlignment="Bottom" Width="120" Content="Vocabulary" Click="bnt_New_Vocabulary_Click"/>
+				<data:DataGrid x:Name="dg_NewVocabulary" Margin="98,-572,72,0" Height="300" VerticalAlignment="Top" RenderTransformOrigin="0.5,0.5" Grid.ColumnSpan="2">
+					<data:DataGrid.RenderTransform>
+						<TransformGroup>
+							<ScaleTransform/>
+							<SkewTransform/>
+							<RotateTransform/>
+							<TranslateTransform/>
+						</TransformGroup>
+					</data:DataGrid.RenderTransform>
+				</data:DataGrid>
 			</Grid>
 		</ScrollViewer>
 	</Grid>
