thêm biến lưu giá trị unit được chọn (Hà Thanh Tuấn)

--- a/DesignTemplate/UISample/UISample/MainPage.xaml
+++ b/DesignTemplate/UISample/UISample/MainPage.xaml
@@ -618,10 +618,7 @@
                         
 					</Grid>
 					<Grid x:Name="grdUnit" Height="450" Width="173" RenderTransformOrigin="0.5,0.5" Canvas.Left="67">
-						<Grid.RowDefinitions>
-							<RowDefinition Height="0.662*"/>
-							<RowDefinition Height="0.338*"/>
-						</Grid.RowDefinitions>
+						
 						<Grid.RenderTransform>
 							<TransformGroup>
 								<ScaleTransform/>
@@ -640,19 +637,22 @@
 								</TransformGroup>
 							</Rectangle.RenderTransform>
 						</Rectangle>
-						<TextBlock x:Name="txbChooseUnit" Height="29" Text="Choose a unit" TextWrapping="Wrap" FontWeight="Bold" FontSize="16" Foreground="White" TextAlignment="Center" Margin="23,0,19,19" VerticalAlignment="Bottom" Grid.Row="1"/>
-						<inf:MyButton x:Name="mbtUnit1" myText="Unit 1" Margin="0,36,0,0" Height="28" VerticalAlignment="Top" Width="173"/>
-						<inf:MyButton x:Name="mbtUnit2" myText="Unit 2" Margin="0,68,0,0" Height="28" VerticalAlignment="Top" Width="173"/>
-						<inf:MyButton x:Name="mbtUnit3" myText="Unit 3" Margin="0,98,0,0" Height="28" VerticalAlignment="Top" Width="173"/>
-						<inf:MyButton x:Name="mbtUnit4" myText="Unit 4" Margin="0,130,0,143" Width="173"/>
-						<inf:MyButton x:Name="mbtUnit5" myText="Unit 5" Margin="0,0,0,113" VerticalAlignment="Bottom" d:LayoutOverrides="Height" Width="173"/>
-						<inf:MyButton x:Name="mbtUnit6" myText="Unit 6" Margin="0,0,0,81" Height="28" VerticalAlignment="Bottom" Width="173"/>
-						<inf:MyButton x:Name="mbtUnit7" myText="Unit 7" Margin="0,0,0,53" Height="28" VerticalAlignment="Bottom" Width="173"/>
-						<inf:MyButton x:Name="mbtUnit8" myText="Unit 8" Margin="0,0,0,25" Height="28" VerticalAlignment="Bottom" Width="173"/>
-						<inf:MyButton x:Name="mbtUnit9" myText="Unit 9" Margin="0,0,0,-7" Height="28" VerticalAlignment="Bottom" Width="173"/>
-						<inf:MyButton x:Name="mbtUnit10" myText="Unit 10" Margin="0,7,0,0" Height="28" VerticalAlignment="Top" Grid.Row="1" Width="173"/>
-						<inf:MyButton x:Name="mbtUnit11" myText="Unit 11" Margin="0,35,0,0" VerticalAlignment="Top" Grid.Row="1" d:LayoutOverrides="Height" Width="173"/>
-						<inf:MyButton x:Name="mbtUnit12" myText="Unit 12" Margin="0,64,0,63" Grid.Row="1" Width="173"/>
+						<inf:MyButton x:Name="mbtUnit1" myText="Unit 1" ID="1" Margin="0,15,0,0" Height="25" VerticalAlignment="Top" Width="173" MouseLeftButtonDown="mbtUnit_MouseLeftButtonDown"/>
+						<inf:MyButton x:Name="mbtUnit2" myText="Unit 2" ID="2" Margin="0,40,0,0" Height="25" VerticalAlignment="Top" Width="173" MouseLeftButtonDown="mbtUnit_MouseLeftButtonDown"/>
+						<inf:MyButton x:Name="mbtUnit3" myText="Unit 3" ID="3" Margin="0,65,0,0" Height="25" VerticalAlignment="Top" Width="173" MouseLeftButtonDown="mbtUnit_MouseLeftButtonDown"/>
+						<inf:MyButton x:Name="mbtUnit4" myText="Unit 4" ID="4" Margin="0,90,0,0" Height ="25" VerticalAlignment="Top" Width="173" MouseLeftButtonDown="mbtUnit_MouseLeftButtonDown"/>
+						<inf:MyButton x:Name="mbtUnit5" myText="Unit 5" ID="5" Margin="0,115,0,0" Height ="25" VerticalAlignment="Top" Width="173" MouseLeftButtonDown="mbtUnit_MouseLeftButtonDown"/>
+						<inf:MyButton x:Name="mbtUnit6" myText="Unit 6" ID="6" Margin="0,140,0,0" Height ="25" VerticalAlignment="Top" Width="173" MouseLeftButtonDown="mbtUnit_MouseLeftButtonDown"/>
+						<inf:MyButton x:Name="mbtUnit7" myText="Unit 7" ID="7" Margin="0,165,0,0" Height ="25" VerticalAlignment="Top" Width="173" MouseLeftButtonDown="mbtUnit_MouseLeftButtonDown"/>
+						<inf:MyButton x:Name="mbtUnit8" myText="Unit 8" ID="8" Margin="0,190,0,0" Height ="25" VerticalAlignment="Top" Width="173" MouseLeftButtonDown="mbtUnit_MouseLeftButtonDown"/>
+						<inf:MyButton x:Name="mbtUnit9" myText="Unit 9" ID="9" Margin="0,215,0,0" Height ="25" VerticalAlignment="Top" Width="173" MouseLeftButtonDown="mbtUnit_MouseLeftButtonDown"/>
+						<inf:MyButton x:Name="mbtUnit10" myText="Unit 10" ID="10" Margin="0,240,0,0" Height ="25" VerticalAlignment="Top" Width="173" MouseLeftButtonDown="mbtUnit_MouseLeftButtonDown"/>
+						<inf:MyButton x:Name="mbtUnit11" myText="Unit 11" ID="11" Margin="0,265,0,0" Height ="25" VerticalAlignment="Top" Width="173" MouseLeftButtonDown="mbtUnit_MouseLeftButtonDown"/>
+						<inf:MyButton x:Name="mbtUnit12" myText="Unit 12" ID="12" Margin="0,290,0,0" Height ="25" VerticalAlignment="Top" Width="173" MouseLeftButtonDown="mbtUnit_MouseLeftButtonDown"/>
+                        <inf:MyButton x:Name="mbtUnit13" myText="Unit 13" ID="13" Margin="0,315,0,0" Height ="25" VerticalAlignment="Top" Width="173" MouseLeftButtonDown="mbtUnit_MouseLeftButtonDown"/>
+                        <inf:MyButton x:Name="mbtUnit14" myText="Unit 14" ID="14" Margin="0,340,0,0" Height ="25" VerticalAlignment="Top" Width="173" MouseLeftButtonDown="mbtUnit_MouseLeftButtonDown"/>
+                        <inf:MyButton x:Name="mbtUnit15" myText="Unit 15" ID="15" Margin="0,365,0,0" Height ="25" VerticalAlignment="Top" Width="173" MouseLeftButtonDown="mbtUnit_MouseLeftButtonDown"/>
+                        <inf:MyButton x:Name="mbtUnit16" myText="Unit 16" ID="16" Margin="0,390,0,0" Height ="25" VerticalAlignment="Top" Width="173" MouseLeftButtonDown="mbtUnit_MouseLeftButtonDown"/>
 						<!--<Rectangle x:Name="rctUnit1" Fill="#FF0095D9" Stroke="Black" RadiusX="10" RadiusY="10" Height="25" Opacity="0" MouseLeave="rctUnit1_MouseLeave" MouseLeftButtonDown="rctUnit1_MouseLeftButtonDown" MouseMove="rctUnit1_MouseMove" Cursor="Hand" Margin="0,40,0,0" VerticalAlignment="Top"/>
 						<Rectangle x:Name="rctUnit2" Fill="#FF0095D9" Stroke="Black" RadiusX="10" RadiusY="10" Height="25" Opacity="0" Cursor="Hand" MouseLeave="rctUnit2_MouseLeave" MouseLeftButtonDown="rctUnit2_MouseLeftButtonDown" MouseMove="rctUnit2_MouseMove" HorizontalAlignment="Right" Margin="0,79,0,0" VerticalAlignment="Top" Width="173"/>
 						<Rectangle x:Name="rctUnit3" Fill="#FF0095D9" Stroke="Black" RadiusX="10" RadiusY="10" Height="25" Opacity="0" Cursor="Hand" MouseLeave="rctUnit3_MouseLeave" MouseLeftButtonDown="rctUnit3_MouseLeftButtonDown" MouseMove="rctUnit3_MouseMove" Margin="1,118,0,0" VerticalAlignment="Top"/>
