--- a/DesignTemplate/UISample/UISample/MainPage.xaml
+++ b/DesignTemplate/UISample/UISample/MainPage.xaml
@@ -610,10 +610,10 @@
 						<Rectangle x:Name="rctSection" Fill="#FF231f20" Stroke="Black" RadiusX="10" RadiusY="10" Height="450" Width="212"/>
 						<TextBlock x:Name="txbChooseSection" Height="43" Text="Choose a section of the unit" TextWrapping="Wrap" FontWeight="Bold" FontSize="16" Foreground="White" HorizontalAlignment="Left" Width="158" TextAlignment="Center" Margin="25,0,0,17" VerticalAlignment="Bottom"/>
 
-						<inf:MyButton x:Name="mbtReading" myText="Reading" Margin="0,33,0,0" Height="28" VerticalAlignment="Top" MouseLeftButtonDown="mbt_MouseLeftButtonDown"/>
-						<inf:MyButton x:Name="mbtListening" myText="Listening" Margin="0,65,0,0" Height="30" VerticalAlignment="Top" MouseLeftButtonDown="mbt_MouseLeftButtonDown"/>
-						<inf:MyButton x:Name="mbtSpeaking" myText="Speaking" Margin="0,99,0,0" Height="30" VerticalAlignment="Top" MouseLeftButtonDown="mbt_MouseLeftButtonDown"/>
-						<inf:MyButton x:Name="mbtGrammar" myText="Grammar" Margin="0,133,0,0" MouseLeftButtonDown="mbt_MouseLeftButtonDown" VerticalAlignment="Top" d:LayoutOverrides="Height"/>
+						<inf:MyButton x:Name="mbtReading" myText="Reading" ID="17" Margin="0,33,0,0" Height="28" VerticalAlignment="Top" MouseLeftButtonDown="mbt_MouseLeftButtonDown"/>
+						<inf:MyButton x:Name="mbtListening" ID="18" myText="Listening" Margin="0,65,0,0" Height="30" VerticalAlignment="Top" MouseLeftButtonDown="mbt_MouseLeftButtonDown"/>
+						<inf:MyButton x:Name="mbtSpeaking" ID="19" myText="Speaking" Margin="0,99,0,0" Height="30" VerticalAlignment="Top" MouseLeftButtonDown="mbt_MouseLeftButtonDown"/>
+						<inf:MyButton x:Name="mbtGrammar" ID="20" myText="Grammar" Margin="0,133,0,0" MouseLeftButtonDown="mbt_MouseLeftButtonDown" VerticalAlignment="Top" d:LayoutOverrides="Height"/>
 						<inf:MyButton x:Name="mbtLanguageFocus" myText="Language Focus" Height="31" Margin="0,162,0,0" VerticalAlignment="Top" MouseLeftButtonDown="mbt_MouseLeftButtonDown"/>
                         
 					</Grid>
